# RoboticsMotionPlanning

./: .gitignore  CMakeLists.txt  ReadMe.md  run.sh
include/: common.h  line.h  map.h  map_tools_geometry.h  map_tools_geometry_line.h  map_tools_space_transformations.h  matrix.h  rectangle_room.h  room.h  space_representation_2D.h  wall.h
include/AnimationToolkit/: Animator.h
include/MapToolkit/: SpaceRepresentation.h  VectorSpaceRepresentation.h  line.h  map.h  map_tools_common.h  rectangle_room.h  room.h  wall.h
src/: map_generation.cpp
src/AnimationToolkit/: opencvDemo.cpp
src/OccupancyGridBuilding/: .map.cpp.swo  VectorSpaceRepresentation.cpp  line.cpp  map.cpp  map_tools_geometry_line.cpp  map_tools_space_transformations.cpp  rectangle_room.cpp  space_representation_2D.cpp
test/: MapGenerationTests.cmake  space_representation_2d_tests.cpp
